; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_ifa_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_ifa_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifaddr = type { i32, i32 }

@net_epoch_preempt = common dso_local global i32 0, align 4
@ifa_destroy = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ifa_free(%struct.ifaddr* %0) #0 {
  %2 = alloca %struct.ifaddr*, align 8
  store %struct.ifaddr* %0, %struct.ifaddr** %2, align 8
  %3 = load %struct.ifaddr*, %struct.ifaddr** %2, align 8
  %4 = getelementptr inbounds %struct.ifaddr, %struct.ifaddr* %3, i32 0, i32 1
  %5 = call i64 @refcount_release(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load i32, i32* @net_epoch_preempt, align 4
  %9 = load %struct.ifaddr*, %struct.ifaddr** %2, align 8
  %10 = getelementptr inbounds %struct.ifaddr, %struct.ifaddr* %9, i32 0, i32 0
  %11 = load i32, i32* @ifa_destroy, align 4
  %12 = call i32 @epoch_call(i32 %8, i32* %10, i32 %11)
  br label %13

13:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @refcount_release(i32*) #1

declare dso_local i32 @epoch_call(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
